kubernetes/core/cilium/cilium-secrets.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: cilium-secrets
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
