kubernetes/core/cilium/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-relay
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
      app.kubernetes.io/part-of: cilium
      k8s-app: hubble-relay
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: hubble-ui
              app.kubernetes.io/part-of: cilium
              k8s-app: hubble-ui
      ports:
        - port: 4245
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 4222
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
      app.kubernetes.io/part-of: cilium
      k8s-app: hubble-relay
  egress:
    - toEntities:
      - kube-apiserver
      - host
      - remote-node
      toPorts:
        - ports:
            - port: "4244" # hubble-relay
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-generate-certs
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-generate-certs
  egress:
    - toEntities:
      - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-ui
      app.kubernetes.io/part-of: cilium
      k8s-app: hubble-ui
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: hubble-relay
              app.kubernetes.io/part-of: cilium
              k8s-app: hubble-relay
      ports:
        - port: 4245
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/name: haproxy-ingress
      ports:
        - port: 8081
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-ui
      app.kubernetes.io/part-of: cilium
      k8s-app: hubble-ui
  egress:
    - toEntities:
      - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
